--- a/index.html
+++ b/index.html
@@ -367,81 +367,83 @@
         <span>e</span>
         <span>w</span>
       </h1>
-      <div class="swiper-container review-slider">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <div class="box">
-              <img src="images/pic1.png" alt="" />
-              <h3>kim Kardashyan</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
-                consequuntur aliquid at maxime consequatur unde eos cumque
-                nostrum ratione mollitia. Illo mollitia labore repellat iste ad
-                a consequatur eaque sint.
-              </p>
-              <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
+      <div class="container">
+        <div class="swiper-container review-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="box">
+                <img src="images/pic1.png" alt="" />
+                <h3>kim Kardashyan</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
+                  consequuntur aliquid at maxime consequatur unde eos cumque
+                  nostrum ratione mollitia. Illo mollitia labore repellat iste
+                  ad a consequatur eaque sint.
+                </p>
+                <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="box">
-              <img src="images/pic2.png" alt="" />
-              <h3>kim Kardashyan</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
-                consequuntur aliquid at maxime consequatur unde eos cumque
-                nostrum ratione mollitia. Illo mollitia labore repellat iste ad
-                a consequatur eaque sint.
-              </p>
-              <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
+            <div class="swiper-slide">
+              <div class="box">
+                <img src="images/pic2.png" alt="" />
+                <h3>kim Kardashyan</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
+                  consequuntur aliquid at maxime consequatur unde eos cumque
+                  nostrum ratione mollitia. Illo mollitia labore repellat iste
+                  ad a consequatur eaque sint.
+                </p>
+                <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="box">
-              <img src="images/pic3.png" alt="" />
-              <h3>kim Kardashyan</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
-                consequuntur aliquid at maxime consequatur unde eos cumque
-                nostrum ratione mollitia. Illo mollitia labore repellat iste ad
-                a consequatur eaque sint.
-              </p>
-              <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
+            <div class="swiper-slide">
+              <div class="box">
+                <img src="images/pic3.png" alt="" />
+                <h3>kim Kardashyan</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
+                  consequuntur aliquid at maxime consequatur unde eos cumque
+                  nostrum ratione mollitia. Illo mollitia labore repellat iste
+                  ad a consequatur eaque sint.
+                </p>
+                <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="box">
-              <img src="images/pic4.png" alt="" />
-              <h3>kim Kardashyan</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
-                consequuntur aliquid at maxime consequatur unde eos cumque
-                nostrum ratione mollitia. Illo mollitia labore repellat iste ad
-                a consequatur eaque sint.
-              </p>
-              <div class="stars">
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="fas fa-star"></i>
-                <i class="far fa-star"></i>
+            <div class="swiper-slide">
+              <div class="box">
+                <img src="images/pic4.png" alt="" />
+                <h3>kim Kardashyan</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
+                  consequuntur aliquid at maxime consequatur unde eos cumque
+                  nostrum ratione mollitia. Illo mollitia labore repellat iste
+                  ad a consequatur eaque sint.
+                </p>
+                <div class="stars">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="far fa-star"></i>
+                </div>
               </div>
             </div>
           </div>
@@ -484,14 +486,16 @@
     </section>
 
     <section class="brand">
-      <div class="swiper-container brand-slider">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="images/1.jpg" alt="" /></div>
-          <div class="swiper-slide"><img src="images/2.jpg" alt="" /></div>
-          <div class="swiper-slide"><img src="images/3.jpg" alt="" /></div>
-          <div class="swiper-slide"><img src="images/4.jpg" alt="" /></div>
-          <div class="swiper-slide"><img src="images/5.jpg" alt="" /></div>
-          <div class="swiper-slide"><img src="images/6.jpg" alt="" /></div>
+      <div class="container">
+        <div class="swiper-container brand-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><img src="images/1.jpg" alt="" /></div>
+            <div class="swiper-slide"><img src="images/2.jpg" alt="" /></div>
+            <div class="swiper-slide"><img src="images/3.jpg" alt="" /></div>
+            <div class="swiper-slide"><img src="images/4.jpg" alt="" /></div>
+            <div class="swiper-slide"><img src="images/5.jpg" alt="" /></div>
+            <div class="swiper-slide"><img src="images/6.jpg" alt="" /></div>
+          </div>
         </div>
       </div>
     </section>
