--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="#services">services</a>
         <a href="#gallery">gallery</a>
         <a href="#review">review</a>
-        <a href="#contact">contact</a>
+        <a href="#contacts">contact</a>
       </nav>
 
       <div class="icons">
